# BeyondLiteral_Idiomaticity_Detection_ANLP_Project

./: .env.example  .gitignore  Dockerfile  How_to_colab.ipynb  README.md  config.yaml  docker-compose.yaml  experiments_tar.md  pyproject.toml  run_experiments.slurm  run_experiments_finetuning.slurm  test.py
.nltk_data/: setup_nltk.py
data/: data_preprocessing_splitting.py
data/analysis/: one_shot_test_analysis.csv  one_shot_test_slice_ids.json  zero_shot_test_analysis.csv  zero_shot_test_slice_ids.json
docker/: download_experients.sh  download_experiments.sh
documentation/: How_to_colab.ipynb  How_to_kaggle.ipynb  ModelRunner_template.py
logs/: array_1771756_0.err  array_1771756_0.out  array_1771756_1.err  array_1771756_1.out  array_1771756_10.err  array_1771756_10.out  array_1771756_11.err  array_1771756_11.out  array_1771756_12.err  array_1771756_12.out  array_1771756_13.err  array_1771756_13.out  array_1771756_2.err  array_1771756_2.out  array_1771756_3.err  array_1771756_3.out  array_1771756_4.err  array_1771756_4.out  array_1771756_5.err  array_1771756_5.out  array_1771756_6.err  array_1771756_6.out  array_1771756_7.err  array_1771756_7.out  array_1771756_8.err  array_1771756_8.out  array_1771756_9.err  array_1771756_9.out
results/: master_metrics_long.csv  slice_metrics_long.csv  slices_overview.csv  stress_masking_summary_isolated.csv  stress_masking_summary_multilingual.csv
slurm_scripts/: run_experiments.slurm  setup.slurm  slurm_commands
src/: config.py  data.py  evaluation.py  main.py  metrics.py  preprocessing.py  training.py
(+145 files in other folders)
