[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anlp-idioms"
version = "0.1.0"
description = "ANLP semester project: idiomaticity detection (SemEval)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "pytest>=8.0",
  "torch>=2.2",
  "transformers>=4.41",
  "accelerate>=0.31",
  "gensim>=4.3.0",
  "scipy>=1.4",
  "matplotlib>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
